# bing-images-mcp-server

./: .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  bing-images-mcp-server.code-workspace  check_fastmcp.py  inspect_month.py  main.py  package-lock.json  pyproject.toml  render.yaml  server.py  test_server.py
web-app/: README.md  next.config.ts  package-lock.json  package.json
web-app/app/: actions.ts  page.tsx
web-app/app/api/bing-image/: route.ts
web-app/app/api/chat/: route.ts
web-app/app/components/: Chat.tsx  ImageInfo.tsx
web-app/lib/: mcp.ts
