[project]
name = "bing-images-mcp-server"
version = "0.1.0"
description = "MCP server to fetch Bing Image of the Day from peapix.com"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "httpx",
    "beautifulsoup4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

